textwrap problem fixed animation added

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -62,6 +62,21 @@ button:hover, button:focus, input:hover, input:focus, textarea:hover, textarea:f
     cursor: progress;
     color: $darkFontColor;
 }
+p.wait, textarea.wait {
+
+    animation: blinker 1s cubic-bezier(1,-0.04,0,1.06) infinite;
+}
+
+    @keyframes blinker {
+        0% {
+          color: $highlightFontColor;
+        }
+    }
+
+    // @keyframes blinker {
+    //     from {color: $darkFontColor;}
+    //     to {color:$highlightFontColor;}
+    // }
 
 .closeButton, #optionButton, #optionsCollapseButton {
     border: none;
@@ -197,6 +212,7 @@ fieldset {
         > div {
             display: block;
             padding: 2rem;
+            max-width: calc(100% - 25rem);
             &:nth-of-type(2) {
                 min-width: 25rem;
                 white-space: pre;
@@ -318,8 +334,12 @@ textarea {
     }
 
     #output {
-        div {
+        > div {
             flex-direction: column;
+            // > div {
+            > div {
+                max-width: 100%;
+            }
         }
     }
 
